RESOLVED FIXED97137
Warning in SandboxExtension.h if WEB_PROCESS_SANDBOX is not enabled
https://bugs.webkit.org/show_bug.cgi?id=97137
Summary Warning in SandboxExtension.h if WEB_PROCESS_SANDBOX is not enabled
Pratik Solanki
Reported 2012-09-19 15:11:04 PDT
When WEB_PROCESS_SANDBOX is not enabled, the field m_size is never used. In this case the compiler gives the following warning Source/WebKit2/Shared/SandboxExtension.h:90:16: error: private field 'm_size' is not used [-Werror,-Wunused-private-field] size_t m_size; ^ 1 error generated.
Attachments
Patch (1.35 KB, patch)
2012-09-19 15:17 PDT, Pratik Solanki
benjamin: review+
Pratik Solanki
Comment 1 2012-09-19 15:17:06 PDT
Pratik Solanki
Comment 2 2012-09-19 15:23:29 PDT
Note You need to log in before you can comment on or make changes to this bug.