Warning in SandboxExtension.h if WEB_PROCESS_SANDBOX is not enabled https://bugs.webkit.org/show_bug.cgi?id=97137

Reviewed by Benjamin Poulain.

m_size is only used when WEB_PROCESS_SANDBOX is enabled, so move its declaration inside
#if ENABLE(WEB_PROCESS_SANDBOX).

* Shared/SandboxExtension.h:
(HandleArray):

Canonical link: https://commits.webkit.org/115101@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129049 268f45cc-cd09-0410-ab3c-d52691b4dbfc